# go-to-rust

./: README.md
go/: go.mod
go/device/: device.go  device_test.go
go/internal/controller/: controller.go  controller_test.go
rust/00-initial/controller/: Cargo.toml
rust/00-initial/controller/src/: lib.rs
rust/00-initial/device/: Cargo.toml
rust/00-initial/device/src/: lib.rs
rust/01-async-request-unstable/controller/: Cargo.toml
rust/01-async-request-unstable/device/src/: lib.rs
rust/02-stable-rust-first-try/: Cargo.toml
rust/02-stable-rust-first-try/device/src/: lib.rs
rust/03-stable-rust/controller/src/: lib.rs
rust/03-stable-rust/device/: Cargo.toml
rust/04-generic-async-rwlock-first-try/base/src/: runtime.rs
rust/04-generic-async-rwlock-first-try/controller/: Cargo.toml
rust/04-generic-async-rwlock-first-try/controller/src/: lib.rs
rust/04-generic-async-rwlock-first-try/device/src/: lib.rs
rust/04-generic-async-rwlock-first-try/runtime-tokio/: Cargo.toml
rust/04-generic-async-rwlock-first-try/runtime-tokio/src/: lib.rs
rust/04-generic-async-rwlock-first-try/runtime-tokio/src/rwlock/: tests.rs
rust/05-final/: Cargo.toml
rust/05-final/base/: Cargo.toml
rust/05-final/base/implbox/: Cargo.toml
rust/05-final/base/src/: runtime.rs
rust/05-final/controller/: Cargo.toml
rust/05-final/controller/src/: lib.rs
rust/05-final/device/: Cargo.toml
rust/05-final/device/src/: lib.rs
rust/05-final/runtime-tokio/: Cargo.toml
rust/05-final/runtime-tokio/src/: lib.rs  rwlock.rs
rust/hrtb/: Cargo.toml
rust/hrtb/src/: lib.rs
(+4 files in other folders)
